--- a/src/App.global.css
+++ b/src/App.global.css
@@ -10,13 +10,21 @@
   margin: 0;
 }
 
-#root {
-  position: relative;
-  min-height: 100vh;
+body {
+  background-color: aliceblue;
   min-width: 100vw;
+  position: relative;
+}
+
+#root {
+  min-height: calc(100vh - 51px - 4rem);
   overflow-y: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  width: 100%;
+}
+
+.chakra-checkbox__control {
+  color: black;
 }
