--- a/src/components/Form/HookForm/FormInput/FormInput.module.scss
+++ b/src/components/Form/HookForm/FormInput/FormInput.module.scss
@@ -1,10 +1,10 @@
 .hasError {
-  border: solid 1px #d61b1b;
+  border: solid 1px var(--ui-red);
 }
 
 .Error {
   position: absolute;
-  color: #d61b1b;
+  color: var(--ui-red);
   font-size: 11px;
   bottom: -15px;
   right: 0;
