--- a/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
+++ b/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
@@ -3,13 +3,13 @@
   top: 0;
   right: 0;
   width: 24px;
-  background-color: #4fcdb6;
+  background-color: var(--primary-color);
   height: 100vh;
   z-index: 1000;
 }
 
 .QrButtonWrapper {
-  background-color: #4fcdb6;
+  background-color: var(--primary-color);
   position: absolute;
   right: 2px;
   bottom: 65px;
@@ -18,9 +18,8 @@
 }
 
 .QrButton {
-  background: #364d64;
+  background: var(--primary-color-font);
   border: none;
-  color: white;
   width: 65px;
   height: 65px;
   border-radius: 50%;
@@ -58,7 +57,7 @@
   border-radius: 50%;
   top: 0;
   right: 0;
-  box-shadow: 31px -31px 0 0 #4fcdb6;
+  box-shadow: 31px -31px 0 0 var(--primary-color);
 }
 
 .QrButtonCurveRight:before {
@@ -70,5 +69,5 @@
   border-radius: 50%;
   top: 0;
   right: 0;
-  box-shadow: 31px -31px 0 0 #4fcdb6;
+  box-shadow: 31px -31px 0 0 var(--primary-color);
 }
