initial work success page

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --secondary-color-font: #184186;
   --ui-red: #d61b1b;
   --bg: #f8f8f9;
+  --bg-secondary: #e9ebef;
+  --grey: #666769;
 }
 
 * {
