--- a/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
+++ b/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
@@ -3,71 +3,74 @@
   top: 0;
   right: 0;
   width: 24px;
-  background-color: var(--primary-color);
   height: 100vh;
   z-index: 1000;
+
+  &.isClosed {
+    background-color: var(--primary-color);
+  }
+
+  &.isOpen {
+    background-color: var(--primary-color-font);
+  }
 }
 
 .QrButtonWrapper {
-  background-color: var(--primary-color);
   position: absolute;
   right: 2px;
   bottom: 65px;
   padding: 1rem;
-  border-radius: 50%;
+  width: 65px;
+  height: 65px;
+}
+
+.QrCodePlaceholder {
+  position: absolute;
+  bottom: 0;
+  fill: var(--primary-color);
+
+  & > circle {
+    fill: var(--bg);
+  }
+}
+
+.QrCodePlaceholderOpen {
+  position: absolute;
+  bottom: 0;
+  fill: var(--bg);
+
+  & > circle {
+    fill: var(--primary-color);
+  }
 }
 
 .QrButton {
-  background: var(--primary-color-font);
   border: none;
-  width: 65px;
-  height: 65px;
-  border-radius: 50%;
   overflow: hidden;
+  background-color: transparent;
+  position: absolute;
+  right: 29px;
+  top: 2px;
   cursor: pointer;
+
+  & .QrCode {
+    height: 25px;
+    width: 25px;
+    fill: var(--primary-color);
+  }
+
+  & .QrCodeOpen {
+    height: 25px;
+    width: 25px;
+    fill: var(--bg);
+  }
 }
 
-.QrButtonCurveLeft {
-  width: 62px;
-  height: 62px;
-  overflow: hidden;
+.QrCodePage {
   position: absolute;
-  top: 90px;
-  right: 20px;
-  overflow: hidden;
-}
-
-.QrButtonCurveRight {
-  width: 62px;
-  height: 62px;
-  overflow: hidden;
-  position: absolute;
-  top: -54px;
-  right: 20px;
-  overflow: hidden;
-  transform: rotate(90deg);
-}
-
-.QrButtonCurveLeft:before {
-  content: "";
-  display: block;
-  width: 200%;
-  height: 200%;
-  position: absolute;
-  border-radius: 50%;
   top: 0;
-  right: 0;
-  box-shadow: 31px -31px 0 0 var(--primary-color);
-}
-
-.QrButtonCurveRight:before {
-  content: "";
-  display: block;
-  width: 200%;
-  height: 200%;
-  position: absolute;
-  border-radius: 50%;
-  top: 0;
-  right: 0;
-  box-shadow: 31px -31px 0 0 var(--primary-color);
+  width: 414px;
+  background-color: var(--primary-color);
+  height: 100vh;
+  z-index: 9000;
 }
