--- a/src/pages/IntroSteps/CreateWallet/CreateWallet.module.scss
+++ b/src/pages/IntroSteps/CreateWallet/CreateWallet.module.scss
@@ -9,19 +9,22 @@
     height: 100%;
     width: 100%;
     transform: rotate(180deg);
+    fill: var(--arrow-grey);
   }
 }
 
 .Title {
-  font-size: 20px;
-  margin-top: 110px;
+  font-size: 24px;
+  margin-top: 125px;
   margin-bottom: 15px;
+  color: var(--primary-color);
 }
 
 .Subtitle {
   font-size: 12px;
-  margin-bottom: 90px;
+  margin-bottom: 110px;
   margin-right: 35px;
+  color: var(--primary-color);
 }
 
 .Password {
