--- a/src/pages/IntroSteps/ImportWallet/ImportWallet.module.scss
+++ b/src/pages/IntroSteps/ImportWallet/ImportWallet.module.scss
@@ -9,27 +9,30 @@
     height: 100%;
     width: 100%;
     transform: rotate(180deg);
+    fill: var(--arrow-grey);
   }
 }
 
 .Title {
   font-size: 20px;
-  margin-top: 75px;
+  margin-top: 130px;
   margin-bottom: 15px;
+  color: var(--primary-color);
 }
 
 .Subtitle {
   font-size: 12px;
-  margin-bottom: 190px;
+  margin-bottom: 125px;
   margin-right: 35px;
+  color: var(--primary-color);
 }
 
 .KeyInput {
-  margin-bottom: 22px;
+  margin-bottom: 40px;
 }
 
 .SyncButton {
-  margin-bottom: 80px;
+  margin-bottom: 65px;
 }
 
 .NextButtonContainer {
@@ -38,23 +41,24 @@
   align-self: flex-end;
 
   & .Text {
-    margin-right: 12px;
-    font-size: 14px;
+    margin-right: 6px;
+    font-size: 12px;
   }
 
   & .ArrowButton {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
+    width: 34px;
+    height: 34px;
     border-radius: 50%;
-    border: solid 1.5px;
+    border: solid 1.5px var(--primary-color);
     background-color: transparent;
 
     & .Arrow {
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
+      fill: var(--primary-color);
     }
   }
 }
