--- a/src/pages/IntroSteps/Introduction/Introduction.module.scss
+++ b/src/pages/IntroSteps/Introduction/Introduction.module.scss
@@ -9,19 +9,22 @@
     height: 100%;
     width: 100%;
     transform: rotate(180deg);
+    fill: var(--arrow-grey);
   }
 }
 
 .Title {
-  font-size: 20px;
-  margin-top: 70px;
+  font-size: 24px;
+  margin-top: 100px;
   margin-bottom: 15px;
+  color: var(--primary-color);
 }
 
 .Subtitle {
-  font-size: 14px;
-  margin-bottom: 140px;
+  font-size: 12px;
+  margin-bottom: 275px;
   margin-right: 35px;
+  color: var(--primary-color);
 }
 
 .NextButtonContainer {
@@ -30,22 +33,24 @@
   align-self: flex-end;
 
   & .Text {
-    margin-right: 12px;
+    margin-right: 6px;
+    font-size: 12px;
   }
 
   & .ArrowButton {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
+    width: 34px;
+    height: 34px;
     border-radius: 50%;
-    border: solid 1.5px;
+    border: solid 1.5px var(--primary-color);
     background-color: transparent;
 
     & .Arrow {
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
+      fill: var(--primary-color);
     }
   }
 }
