--- a/src/components/Layout/RecentTransactions/RecentTransactions.module.scss
+++ b/src/components/Layout/RecentTransactions/RecentTransactions.module.scss
@@ -52,6 +52,10 @@
         text-overflow: ellipsis;
         text-align: center;
       }
+
+      & .NoTransactions {
+        margin: 0 auto;
+      }
     }
   }
 }
