require gas price and limit, add pass in db

--- a/src/pages/Home/TabsSection/Wallet/Transaction.module.scss
+++ b/src/pages/Home/TabsSection/Wallet/Transaction.module.scss
@@ -57,10 +57,14 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 
   & .GasInput {
     width: 80px;
+
+    & > span {
+      margin-bottom: -12px;
+    }
   }
 }
 
