--- a/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
+++ b/src/components/Layout/QrCodeSidebar/QrCodeSidebar.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   width: 24px;
-  height: 100vh;
+  height: calc(100vh - 33px);
   z-index: 1000;
 
   &.isClosed {
@@ -74,7 +74,7 @@
   top: 0;
   width: 414px;
   background-color: var(--primary-color);
-  height: 100vh;
+  height: calc(100vh - 32px - 129px);
   z-index: 9000;
   padding-top: 128px;
 
