--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -11,3 +11,10 @@
     width: calc(100vw - 24px);
   }
 }
+
+.SpinnerContainer {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
