--- a/src/pages/Success/Success.module.scss
+++ b/src/pages/Success/Success.module.scss
@@ -62,6 +62,10 @@
       height: 125px;
       width: 136px;
       border-radius: 10px;
+
+      & .JsonIcon {
+        height: 90px;
+      }
     }
   }
 }
