--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -20,9 +20,11 @@
   }
 
   & .Updates {
+    display: flex;
     font-size: 10px;
     padding: 0 1rem;
     color: #8bbea9;
+    text-decoration: none;
   }
 }
 
