--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,9 +1,9 @@
 .Button {
-  width: 100%;
-  padding: 10px;
   border: none;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  width: 100%;
 
   &:focus {
     outline: none;
@@ -24,10 +24,10 @@
   }
 
   &:disabled {
-    cursor: not-allowed;
     background: #e9ebef;
     box-shadow: none;
     color: #ffff;
+    cursor: not-allowed;
   }
 }
 
